--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.119",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/testing-library__react": "^10.2.0",
     "appwrite": "^16.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
