--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/testing-library__react": "^10.2.0",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
     "appwrite": "^16.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
