--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
     "appwrite": "^16.0.2",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
@@ -48,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/axios": "^0.14.4",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
