--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^16.18.119",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
@@ -27,7 +26,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",  
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -50,9 +49,30 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.4",
+    "@types/jest": "^29.5.14",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.20",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15"
+    "tailwindcss": "^3.4.15",
+    "ts-jest": "^29.2.5"
+  },
+  "jest": {
+    "preset": "ts-jest",  
+    "testEnvironment": "jsdom",  
+    "transform": {
+      "^.+\\.(ts|tsx)$": "ts-jest",  
+      "^.+\\.(js|jsx)$": "babel-jest"  
+    },
+    "transformIgnorePatterns": [
+      "/node_modules/(?!axios)/"  
+    ],
+    "moduleNameMapper": {
+      "\\.css$": "identity-obj-proxy"  
+    },
+    "testPathIgnorePatterns": ["/node_modules/", "/build/"],
+    "setupFilesAfterEnv": ["<rootDir>/jest.setup.js"]  
   }
 }
+
