--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "react-scripts": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",  
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -59,20 +60,24 @@
     "ts-jest": "^29.2.5"
   },
   "jest": {
-    "preset": "ts-jest",  
-    "testEnvironment": "jsdom",  
+    "preset": "ts-jest",
+    "testEnvironment": "jsdom",
     "transform": {
-      "^.+\\.(ts|tsx)$": "ts-jest",  
-      "^.+\\.(js|jsx)$": "babel-jest"  
+      "^.+\\.(ts|tsx)$": "ts-jest",
+      "^.+\\.(js|jsx)$": "babel-jest"
     },
     "transformIgnorePatterns": [
-      "/node_modules/(?!axios)/"  
+      "/node_modules/(?!axios)/"
     ],
     "moduleNameMapper": {
-      "\\.css$": "identity-obj-proxy"  
+      "\\.css$": "identity-obj-proxy"
     },
-    "testPathIgnorePatterns": ["/node_modules/", "/build/"],
-    "setupFilesAfterEnv": ["<rootDir>/jest.setup.js"]  
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/build/"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest.setup.js"
+    ]
   }
 }
-
